--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     </head>
   <body>
     <header class="header">
@@ -77,7 +77,7 @@
     </header>
 
 
-    <!--  Выше форма обратной связи, реагирует на кнопку "class="address__button"" на главной странице -->
+    <!-- Ниже форма обратной связи, реагирует на кнопку "class="address__button"" на главной странице -->
 
 
     <div class="call-back--wrapper">
@@ -156,16 +156,14 @@
       <h2 class="visually-hidden">Каталог мороженого</h2>
       <ul class="catalog">
         <li class="catalog__item catalog-item">
-          <div>
-            <div class="catalog__item-popular">
-              <h3 class="visually-hidden">Хит продаж</h3>
-            </div>
-            <img src="img/ice-cream__1.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">310</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <div class="catalog__item-popular">
+            <h3 class="visually-hidden">Хит продаж</h3>
+          </div>
+          <img src="img/ice-cream__1.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">310</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title">
             <a class="catalog-item__title-link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -173,16 +171,14 @@
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <div class="catalog__item-popular">
-              <h3 class="visually-hidden">Хит продаж</h3>
-            </div>
-            <img src="img/ice-cream__2.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">380</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <div class="catalog__item-popular">
+            <h3 class="visually-hidden">Хит продаж</h3>
+          </div>
+          <img src="img/ice-cream__2.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">380</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title">
             <a class="catalog-item__title-link" href="">Сливочно-кофейное с кусочками шоколада</a>
@@ -190,16 +186,14 @@
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <div class="catalog__item-popular">
-              <h3 class="visually-hidden">Хит продаж</h3>
-            </div>
-            <img src="img/ice-cream__3.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">355</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <div class="catalog__item-popular">
+            <h3 class="visually-hidden">Хит продаж</h3>
+          </div>
+          <img src="img/ice-cream__3.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">355</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title">
             <a class="catalog-item__title-link" href="">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -207,16 +201,14 @@
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <div class="catalog__item-popular">
-              <h3 class="visually-hidden">Хит продаж</h3>
-            </div>
-            <img src="img/ice-cream__4.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">415</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <div class="catalog__item-popular">
+            <h3 class="visually-hidden">Хит продаж</h3>
+          </div>
+          <img src="img/ice-cream__4.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">415</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title">
             <a class="catalog-item__title-link" href="">Сливочное крем-брюле с карамельной подливкой</a>
