--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -165,27 +165,27 @@
       <h2 class="visually-hidden">Каталог мороженого</h2>
       <ul class="catalog">
         <li class="catalog__item catalog-item">
-          <div class="">
-            <img src="img/ice-cream__1.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">310</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__1.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">310</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
+          <h3 class="catalog-item__title">
+            <a class="catalog-item__title-link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          </h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__2.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">380</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__2.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">380</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-кофейное с кусочками шоколада</a></h3>
+          <h3 class="catalog-item__title">
+            <a class="catalog-item__title-link" href="">Сливочно-кофейное с кусочками шоколада</a>
+          </h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
@@ -199,109 +199,91 @@
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__4.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">415</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__4.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">415</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное крем-брюле с карамельной подливкой</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__5.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">325</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__5.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">325</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с брусничным джемом</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__6.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">410</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__6.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">410</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-черничное с цельными ягодами черники</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__7.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">375</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__7.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">375</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-лимонное с карамельной присыпкой</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__8.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">320</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__8.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">320</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с шоколадной стружкой</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__9.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">440</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__9.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">440</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-ванильное с кусочками шоколада</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__10.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">435</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__10.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">435</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочноe с ментоловым сиропом</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__11.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">355</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__11.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">355</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с кусочками черного шоколада</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__12.jpg" width="267" height="267" alt="Фото мороженого">
-            <div class="catalog-item-cost">
-              <span class="catalog-item__price">420</span>
-              <span class="catalog-item__ruble">₽</span>
-              <span class="catalog-item__weight">/кг</span>
-            </div>
+          <img src="img/ice-cream__12.jpg" width="267" height="267" alt="Фото мороженого">
+          <div class="catalog-item-cost">
+            <span class="catalog-item__price">420</span>
+            <span class="catalog-item__ruble">₽</span>
+            <span class="catalog-item__weight">/кг</span>
           </div>
           <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с мятным сиропом</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
