--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header__logo" href="index.html" aria-label="Перейти на главную страницу">
-          <img class="header__logo-item" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
+        <img class="header__logo-item" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
         </a>
         <ul class="header__menu">
           <li class="header__menu-item">
@@ -68,7 +68,8 @@
           </div>
           <div class="header__user-buttons-basket header__user-buttons-basket--full">
             <a class="header__basket-link" href="">
-              <div class="header__basket-item header__basket-item--full"></div>2 товара
+              <div class="header__basket-item header__basket-item--full"></div>
+              2 товара
             </a>
             <div class="header__user-buttons--style">
               <div class="basket-table">
@@ -341,7 +342,7 @@
       <h6 class="visually-hidden">Разработчики нашего сайта</h6>
       <div>
         <a class="footer__developer__logo" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">
-          <img src="img/logo-htmlacademy.svg" width="109" height="38" alt="Логотип разработчика">
+        <img src="img/logo-htmlacademy.svg" width="109" height="38" alt="Логотип разработчика">
         </a>
         <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">HTML Academy</a> © 2017</span>
       </div>
