--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
-    </head>
+  </head>
   <body>
     <header class="header">
       <nav class="header-nav">
         <img class="header__logo-item" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
         <ul class="header__menu">
-          <li class="header__menu-item"><a class="header__menu-link" href="catalog.html">Каталог</a>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="catalog.html">Каталог</a>
             <div class="header__menu-inner--style">
               <ul class="header__menu-inner">
                 <li class="header__menu-inner-item header__menu-inner-item--bold"><a class="header__menu-inner-link" href="">Новинки</a></li>
@@ -65,7 +66,8 @@
           </div>
           <div class="header__user-buttons-basket">
             <a class="header__basket-link" href="">
-              <div class="header__basket-item"></div>Пусто
+              <div class="header__basket-item"></div>
+              Пусто
             </a>
           </div>
         </div>
@@ -75,15 +77,11 @@
         <p class="contacts__phone"><a href="tel:88124502525">8 812 450-25-25</a></p>
       </div>
     </header>
-
-
     <!-- Ниже форма обратной связи, реагирует на кнопку "class="address__button"" на главной странице -->
-
-
     <div class="call-back--wrapper">
       <div class="call-back">
         <div class="call-back__window">
-          <button class="call-back__delete-button" aria-label="Закрыть форму"></button>
+          <button class="call-back__delete-button" type="button" aria-label="Закрыть форму"></button>
           <form>
             <p class="call-back__text">Мы обязательно вам ответим!</p>
             <label class="visually-hidden" for="username">Введите имя</label>
@@ -99,11 +97,7 @@
         </div>
       </div>
     </div>
-
-
-    <!--  Выше форма обратной связи, реагирует на кнопку "class="address__button"" на главной странице -->
-
-
+    <!--  Выше форма обратной связи, реагирует на кнопку "class="address__button"" на главной странице -->
     <main class="main">
       <h1 class="visually-hidden">Интернет-магазин мороженого</h1>
       <div class="carousel">
@@ -137,7 +131,6 @@
       <h3 class="visually-hidden">Акции на мороженое</h3>
       <ul class="gifts">
         <li class="gifts-item gifts-item--berry">
-          <img src="img/gifts-item__background--berry.jpeg" width="560" height="229" alt="Фон с малинкой">
           <div class="gifts-item__content">
             <h2 class="gifts-item__title">Малинка даром!</h2>
             <p class="gifts-item__text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
@@ -145,7 +138,6 @@
           <a class="gifts-item__link button" href="">Хочу варенье!</a>
         </li>
         <li class="gifts-item gifts-item--choco">
-          <img src="img/gifts-item__background--choco.jpeg" width="560" height="229" alt="Фон с шоколадкой">
           <div class="gifts-item__content">
             <h2 class="gifts-item__title">Шоколадки даром!</h2>
             <p class="gifts-item__text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно. </p>
@@ -227,29 +219,29 @@
         <li class="benefits__list-item">
           <i class="benefits__list-item-icon"></i>
           <span class="benefits__list-item-text">
-            Все наше мороженое изготавливается на собственном производстве, с использованием современного
-            оборудования и проверенных временем технологий.
+          Все наше мороженое изготавливается на собственном производстве, с использованием современного
+          оборудования и проверенных временем технологий.
           </span>
         </li>
         <li class="benefits__list-item">
           <i class="benefits__list-item-icon"></i>
           <span class="benefits__list-item-text">
-            Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное
-            сотрудничество.
+          Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное
+          сотрудничество.
           </span>
         </li>
         <li class="benefits__list-item">
           <i class="benefits__list-item-icon"></i>
           <span class="benefits__list-item-text">
-            Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества.
-            Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+          Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества.
+          Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
           </span>
         </li>
         <li class="benefits__list-item">
           <i class="benefits__list-item-icon"></i>
           <span class="benefits__list-item-text">
-            Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и
-            позволяет сохранить превосходный вкус.
+          Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и
+          позволяет сохранить превосходный вкус.
           </span>
         </li>
       </ul>
@@ -259,12 +251,12 @@
       <div class="article">
         <div class="article__content">
           <a class="article__rubric" href="" aria-label="Название рубрики">
-            Новое в нашем блоге
+          Новое в нашем блоге
           </a>
           <a class="article__title" href="" aria-label="Заголовок статьи">
-            10 способов сервировки
-            фруктовых щербетов к
-            столу
+          10 способов сервировки
+          фруктовых щербетов к
+          столу
           </a>
         </div>
       </div>
@@ -291,7 +283,8 @@
         <p class="address__text">Для заказов по телефону:</p>
         <p class="address__text address__text--bold">
           <a href="tel:88124502525">8 812 450-25-25</a>
-        </p><br>
+        </p>
+        <br>
         <p class="address__text">(с 10 до 20 ежедневно)</p>
         <a class="address__button button" href="">Форма обратной связи</a>
       </div>
@@ -338,7 +331,7 @@
       <h6 class="visually-hidden">Разработчики нашего сайта</h6>
       <div>
         <a class="footer__developer__logo" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">
-          <img src="img/logo-htmlacademy.svg" width="109" height="38" alt="Логотип разработчика">
+        <img src="img/logo-htmlacademy.svg" width="109" height="38" alt="Логотип разработчика">
         </a>
         <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">HTML Academy</a> © 2017</span>
       </div>
